--- a/web/CSS.css
+++ b/web/CSS.css
@@ -1,59 +1,61 @@
 *{
-  margin: 0;
-  padding:0; 
-     }
-     #sidebar{
-  position: fixed;
-  width: 270px;
-  height: 300%;
-  background: #ffffff;
-  left: -270px;
-  transition: all 300ms linear;
-  top: 58px;
-     }
-     
-     #sidebar.active {
-      left: 0;
-              
-     }
-     
-     #sidebar ul li {
-  color: rgba(230, 230, 230, .9);
-  text-align: center;
-  padding: 15px 10px;
-  list-style: none;
-  border-bottom: 1px solid rgba(100,100,100, .3);
-     }
-     
-     .UCR_LOGO_NEGRO{
-         
-  border-radius: 50%;
-  display: block;
-  margin: 0 auto;
-         
-          }
-          
-    #sidebar .toggle-btn{
-  position: absolute;
-  left: 300px;
-  top: 20px;
-  cursor: pointer;
-  background-color: #ffffff;
-             }
-             
-    #sidebar .toggle-btn span{
-  display: block;
-  width: 40px;
-  text-align: center;
-  font-size: 30px;
-  border: 1px solid #000;  
-             }
-             
-             body{
-                
-                 background-image: url("Ssur.jpg");
-                 background-repeat: no-repeat;
-                 background-size: cover;
-                 background-attachment: fixed;
-                 
-             }
+    margin: 0;
+    padding:0;
+}
+
+
+#sidebar{
+    position: fixed;
+    width: 270px;
+    height: 300%;
+    background: #ffffff; /* Background color of the sidebar */
+    left: -270px; /* Initially positioned outside the left boundary of the screen */
+    transition: all 300ms linear; /* Transition effect for smooth movement */
+    top: 58px; /* Distance from the top of the page */
+}
+
+#sidebar.active {
+    left: 0; /* Moves the sidebar to the visible area of the screen */
+
+}
+
+#sidebar ul li {
+    color: rgba(230, 230, 230, .9); /* Text color for list items */
+    text-align: center;
+    padding: 15px 10px;
+    list-style: none;
+    border-bottom: 1px solid rgba(100,100,100, .3); /* Bottom border for list items */
+}
+
+.UCR_LOGO_NEGRO{
+
+    border-radius: 50%; /* Border radius for UCR_LOGO_NEGRO */
+    display: block;
+    margin: 0 auto;
+
+}
+
+#sidebar .toggle-btn{
+    position: absolute;
+    left: 300px;
+    top: 20px;
+    cursor: pointer;
+    background-color: #ffffff; /* Background color for the toggle button */
+}
+
+#sidebar .toggle-btn span{
+    display: block;
+    width: 40px;
+    text-align: center;
+    font-size: 30px;
+    border: 1px solid #000;
+}
+
+body{
+
+    background-image: url("Ssur.jpg"); /* Background image of the body */
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed; /* Ensures the background image stays fixed while scrolling */
+
+}
