--- a/web/CSS.css
+++ b/web/CSS.css
@@ -59,3 +59,7 @@ body{
     background-attachment: fixed; /* Ensures the background image stays fixed while scrolling */
 
 }
+.btn{
+    
+    width:200px;
+}
